# Cemu

./: CMakeLists.txt  vcpkg.json
cmake/: Findzstd.cmake  ios.toolchain.cmake
dependencies/ih264d/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Cafe/: CMakeLists.txt  CafeSystem.cpp
src/Cafe/Filesystem/: fsc.cpp
src/Cafe/HW/Espresso/: PPCTimer.cpp
src/Cafe/HW/Espresso/Recompiler/: PPCRecompiler.cpp
src/Cafe/HW/Espresso/Recompiler/BackendAArch64/: BackendAArch64.cpp
src/Cafe/HW/Latte/Core/: LatteBufferData.cpp  LatteCommandProcessor.cpp  LatteDefaultShaders.cpp  LatteDefaultShaders.h  LatteOverlay.cpp  LatteRenderTarget.cpp  LatteShader.cpp  LatteShaderCache.cpp  LatteShaderGL.cpp  LatteTextureLegacy.cpp  LatteThread.cpp
src/Cafe/HW/Latte/LatteAddrLib/: LatteAddrLib_Coord.cpp
src/Cafe/HW/Latte/LegacyShaderDecompiler/: LatteDecompiler.cpp
src/Cafe/HW/Latte/Renderer/: MetalView.h  MetalView.mm
src/Cafe/HW/Latte/Renderer/Metal/: LatteTextureMtl.cpp  LatteTextureReadbackMtl.cpp  LatteTextureViewMtl.cpp  MetalCommon.h  MetalLayer.mm  MetalLayerHandle.cpp  MetalMemoryManager.cpp  MetalPipelineCache.cpp  MetalRenderer.cpp  MetalRenderer.h  MetalVoidVertexPipeline.cpp  MetalVoidVertexPipeline.h  RendererShaderMtl.cpp
src/Cafe/HW/MMU/: MMU.h
src/Cafe/IOSU/legacy/: iosu_acp.cpp  iosu_fpd.cpp
src/Cafe/IOSU/nn/boss/: boss_service.cpp
src/Cafe/OS/libs/coreinit/: coreinit_Thread.cpp
src/Cafe/OS/libs/nlibcurl/: nlibcurl.cpp
src/Cafe/OS/libs/nsyshid/: AttachDefaultBackends.cpp  BackendEmulated.cpp  BackendLibusb.cpp  SkylanderXbox360.cpp  SkylanderXbox360.h
src/Cafe/OS/libs/nsysnet/: nsysnet.cpp
src/Cafe/OS/libs/vpad/: vpad.cpp
src/Common/: precompiled.h
src/Common/ExceptionHandler/: ExceptionHandler_posix.cpp
src/Common/unix/: FileStream_unix.cpp
src/audio/: CMakeLists.txt  CoreAudioAPI.h  CoreAudioAPI.mm  IAudioAPI.cpp
src/config/: ActiveSettings.cpp  ActiveSettings.h  CemuConfig.h
src/gui/: CMakeLists.txt
src/gui/ios/: WindowSystemIOS.cpp
src/imgui/: CMakeLists.txt  imgui_extension.cpp
src/input/: CMakeLists.txt  ControllerFactory.cpp
src/input/api/: iOSController.h  iOSController.mm
src/input/api/SDL/: SDLControllerProvider.h
src/input/emulated/: ClassicController.cpp  ProController.cpp  VPADController.cpp
src/ios/: CemuIOS.entitlements  CemuIOSApp.mm  Info.plist
src/util/: CMakeLists.txt
src/util/Fiber/: FiberIOS.cpp
src/util/MemMapper/: MemMapperUnix.cpp
src/util/crypto/: aes128.cpp
src/util/helpers/: StringBuf.h
